--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <body>
         <div>
             <ul>
-                <li><img></li>               
-            </ul>      
+                      <li><img src="photos/keks.png">Кекс</li> 
+                      <li><img src="photos/morozyvo.png">морозиво</li>  
+                      <li><img src="photos/ponchyk.png">пончик</li> 
+                      <li><img src="photos/shokolad.png">Шоколад</li> 
+                      <li><img src="photos/tort.png">торт</li>       
+            </ul>           
               
         </div>
     </body>
